k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: node-boilerplate
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
