k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: node-boilerplate
spec:
  selector:
    app: orders
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  type: ClusterIP
