k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: node-boilerplate
spec:
  selector:
    app: users
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
